--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
     "@headlessui/react": "^1.7.17",
+    "@portabletext/react": "^3.1.0",
+    "@sanity/client": "^6.20.1",
+    "@sanity/image-url": "^1.0.2",
     "dotenv": "^16.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
